fix z-index for stat-box in question.jade

--- a/client/css/questions.less
+++ b/client/css/questions.less
@@ -350,7 +350,7 @@ div.rounded {
 
 .stat-box {
   padding: 6px 0px 4px 0px;
-  z-index: 20;
+  z-index: 1;
   position: relative;
   p, h4 {
     color: white;
